<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Compte_Activity"
    android:background="@color/primary_color"
    android:padding="20dp">


    <ImageView
        android:id="@+id/img_logo_started"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/Logo_app"
        android:src="@drawable/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_started_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/montserrat"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_logo_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="@+id/img_logo_started"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384"/>

    <ImageButton
        android:id="@+id/bell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:src="@drawable/ic_bell"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/img_logo_started"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384"/>

    <ImageButton
        android:id="@+id/favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:background="@null"
        android:src="@drawable/ic_favorite_bookmark"
        app:layout_constraintBottom_toBottomOf="@+id/img_logo_started"
        app:layout_constraintEnd_toStartOf="@id/bell" />

    <TextView
        android:id="@+id/account_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/montserrat"
        android:text="@string/title_account"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_goneMarginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo_started"/>

    <LinearLayout
        android:id="@+id/titles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/account_title"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:background="@android:color/transparent">

        <Button
            android:id="@+id/info_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/personal_information_title"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:background="@android:color/transparent"
            android:drawableBottom="@drawable/ic_personal_information"/>

        <Button
            android:id="@+id/payment_button"
            android:layout_width="0dp"
            android:layout_weight="1.25"
            android:layout_height="wrap_content"
            android:text="@string/payment_information_title"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:background="@android:color/transparent"
            android:drawableBottom="@drawable/ic_wallet"/>

        <Button
            android:id="@+id/notif_button"
            android:layout_width="0dp"
            android:layout_weight="1.25"
            android:layout_height="wrap_content"
            android:text="@string/notification_title"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:background="@android:color/transparent"
            android:drawableBottom="@drawable/ic_bell2"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/underline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_corner"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/titles">

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:background="@drawable/bg_rounded_line" />

        <View
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="2dp"
            android:background="@android:color/transparent" />

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:background="@drawable/bg_rounded_line" />

        <View
            android:layout_width="0dp"
            android:layout_weight="0.1"
            android:layout_height="2dp"
            android:background="@android:color/transparent" />

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="1dp"
            android:background="@drawable/bg_rounded_line" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_Donnee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/underline"
        android:visibility="visible" >

        <TextView
            android:id="@+id/name_compte"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nom: "
            android:textSize="16sp" />

        <TextView
            android:id="@+id/prenom_compte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Prénom: "
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\nAdresse e-mail: "
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="jean.dupont@example.com"
            android:textSize="16sp" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded_corner"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/homebutton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_home" />

        <ImageButton
            android:id="@+id/chatbutton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_keyboard" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <ImageButton
            android:id="@+id/accountbutton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_account" />

        <ImageButton
            android:id="@+id/settingbutton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_setting" />

    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/bg_rounded_diamond"
        android:rotation="45"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
